--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "beautifulsoup4>=4.14.3",
     "flask>=3.1.2",
     "gunicorn>=25.1.0",
     "psycopg2-binary>=2.9.11",
     "python-dotenv>=1.2.1",
+    "requests>=2.32.5",
     "validators>=0.35.0",
 ]
 
